second page complete

--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>men's outerwear</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="heading">
@@ -15,12 +17,14 @@
                 <img src="images/menu.png" alt="">
             </div>
             <div>
-                <a href="#"><strong>SHOP</strong></a>
+                <a href="#">
+                    <strong>SHOP</strong>
+                </a>
             </div>
             <div class="cart-icon">
-                
-                    <img src="images/cart.png" alt="">
-                
+
+                <img src="images/cart.png" alt="">
+
             </div>
 
         </div>
@@ -39,5 +43,160 @@
             </div>
         </nav>
     </header>
+    <section class="mens-outerwear">
+        <div class="mens-outerwear-img">
+            <img src="images/mens_outerwear.jpg" alt=""> </div>
+        <div>
+            <h2>Men's Outerwear</h2>
+        </div>
+        <div>
+            <p class="text">(16 items)</p>
+        </div>
+    </section>
+    <section class="select-items">
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+                <div>
+                    <img src="images/ts1.jpg" alt="tshirt"> </div>
+                <div>
+                    <p>YouTube Ultimate Hooded Sweatshirt</p>
+                    <p class="price">32.45$</p>
+                </div>
+            </div>
+            <div class="select-tshirt">
+                <div>
+                    <img src="images/ts1.jpg" alt="tshirt"> </div>
+                <div>
+                    <p>YouTube Ultimate Hooded Sweatshirt</p>
+                    <p class="price">32.45$</p>
+                </div>
+            </div>
+            <div class="select-tshirt">
+                <div>
+                    <img src="images/ts1.jpg" alt="tshirt"> </div>
+                <div>
+                    <p>YouTube Ultimate Hooded Sweatshirt</p>
+                    <p class="price">32.45$</p>
+                </div>
+            </div>
+            <div class="select-tshirt">
+                <div>
+                    <img src="images/ts1.jpg" alt="tshirt"> </div>
+                <div>
+                    <p>YouTube Ultimate Hooded Sweatshirt</p>
+                    <p class="price">32.45$</p>
+                </div>
+            </div>
+            <div class="select-tshirt">
+                <div>
+                    <img src="images/ts1.jpg" alt="tshirt"> </div>
+                <div>
+                    <p>YouTube Ultimate Hooded Sweatshirt</p>
+                    <p class="price">32.45$</p>
+                </div>
+            </div>
+            <div class="select-tshirt">
+                    <div>
+                        <img src="images/ts1.jpg" alt="tshirt"> </div>
+                    <div>
+                        <p>YouTube Ultimate Hooded Sweatshirt</p>
+                        <p class="price">32.45$</p>
+                    </div>
+                </div>
+                <div class="select-tshirt">
+                    <div>
+                        <img src="images/ts1.jpg" alt="tshirt"> </div>
+                    <div>
+                        <p>YouTube Ultimate Hooded Sweatshirt</p>
+                        <p class="price">32.45$</p>
+                    </div>
+                </div>
+                <div class="select-tshirt">
+                    <div>
+                        <img src="images/ts1.jpg" alt="tshirt"> </div>
+                    <div>
+                        <p>YouTube Ultimate Hooded Sweatshirt</p>
+                        <p class="price">32.45$</p>
+                    </div>
+                </div>
+                <div class="select-tshirt">
+                    <div>
+                        <img src="images/ts1.jpg" alt="tshirt"> </div>
+                    <div>
+                        <p>YouTube Ultimate Hooded Sweatshirt</p>
+                        <p class="price">32.45$</p>
+                    </div>
+                </div>
+                <div class="select-tshirt">
+                    <div>
+                        <img src="images/ts1.jpg" alt="tshirt"> </div>
+                    <div>
+                        <p>YouTube Ultimate Hooded Sweatshirt</p>
+                        <p class="price">32.45$</p>
+                    </div>
+                </div>
+                <div class="select-tshirt">
+                        <div>
+                            <img src="images/ts1.jpg" alt="tshirt"> </div>
+                        <div>
+                            <p>YouTube Ultimate Hooded Sweatshirt</p>
+                            <p class="price">32.45$</p>
+                        </div>
+                    </div>
+
+
+    </section>
+
+
+
+
+
+    <footer>
+        <a href="#">Made by Polymer</a>
+        <div>
+            <p>DEMO ONLY</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
