--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
             </div>
 
         </div>
-        
+
     </header>
 
     <section class="cart-items-heading">
@@ -39,42 +39,44 @@
         <div class="tshirt-image">
             <img src="images/ts1.jpg" alt="">
         </div>
-        <div class="item-name">
-            <a href="#">YouTube Ultimate Hooded Sweatshirt</a>
-        </div>
-        <div class="quantity">
-            <label for="">Qty</label>
-            <select>
-                <option value=>1</option>
-                <option value=>2</option>
-                <option value=>3</option>
-                <option value=>4</option>
-                <option value=>5</option>
-                <option value=>6</option>
-                <option value=>7</option>
-                <option value=>8</option>
-                <option value=>9</option>
-                <option value=>10</option>
-                <option value=>11</option>
-                <option value=>12</option>
-            </select>
-        </div>
-        <div class="size">
-            <p>size: M</p>
-        </div>
-        <div class="amount">$32.35</div>
-        <div class="cross-icon">
-            <img src="images/cross.png" alt="">
+        <div class="detailed-info">
+            <div class="item-name">
+                <a href="#">YouTube Ultimate Hooded Sweatshirt</a>
+            </div>
+            <div class="quantity">
+                <label for="">Qty</label>
+                <select>
+                    <option value=>1</option>
+                    <option value=>2</option>
+                    <option value=>3</option>
+                    <option value=>4</option>
+                    <option value=>5</option>
+                    <option value=>6</option>
+                    <option value=>7</option>
+                    <option value=>8</option>
+                    <option value=>9</option>
+                    <option value=>10</option>
+                    <option value=>11</option>
+                    <option value=>12</option>
+                </select>
+            </div>
+            <div class="size">
+                <p>size: M</p>
+            </div>
+            <div class="amount">$32.35</div>
+            <div class="cross-icon">
+                <img src="images/cross.png" alt="">
+            </div>
         </div>
     </section>
     <section class="checkout-box">
-<div>
-    total: <span>$32.35</span>
-    <button><a href="#">CHECKOUT</a></button>
-</div>
+        <div>
+            total: <span>$32.35</span>
+            <button><a href="#">CHECKOUT</a></button>
+        </div>
     </section>
 
-    <footer>
+    <footer class="cart-footer">
         <a href="#">Made by Polymer</a>
         <div>
             <p>DEMO ONLY</p>
