fixed issues in checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -38,7 +38,7 @@
                 <b>Checkout</b>
             </span>
             <br>
-            <span>is a demo app - form data will not be sent</span>
+            <span id="demo-text">is a demo app - form data will not be sent</span>
         </p>
     </section>
 
