links added and styling improved

--- a/checkout.html
+++ b/checkout.html
@@ -14,16 +14,17 @@
         <div class="heading">
             <div class="menu-img">
                 <div class="empty"></div>
+
                 <img src="images/menu.png" alt="">
             </div>
             <div>
-                <a href="#">
+                <a href="index.html">
                     <strong>SHOP</strong>
                 </a>
             </div>
             <div class="cart-icon">
-
-                <img src="images/cart.png" alt="">
+                    <a href="cart.html">
+                <img src="images/cart.png" alt=""></a>
 
             </div>
 
@@ -38,7 +39,7 @@
                 <b>Checkout</b>
             </span>
             <br>
-            <span id="demo-text">is a demo app - form data will not be sent</span>
+            <span id="demo-text">Shop is a demo app - form data will not be sent</span>
         </p>
     </section>
 
