--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -17,29 +17,29 @@
                 <img src="images/menu.png" alt="">
             </div>
             <div>
-                <a href="#">
+                <a href="index.html">
                     <strong>SHOP</strong>
                 </a>
             </div>
             <div class="cart-icon">
-
-                <img src="images/cart.png" alt="">
+                <a href="cart.html">
+                    <img src="images/cart.png" alt=""></a>
 
             </div>
 
         </div>
         <nav>
             <div>
-                <a href="#">Men's Outerwear</a>
+                <a href="mens_outerwear.html">Men's Outerwear</a>
             </div>
             <div>
-                <a href="#">Ladies Outerwear</a>
+                <a href="mens_outerwear.html">Ladies Outerwear</a>
             </div>
             <div>
-                <a href="#">Men's T-Shirts</a>
+                <a href="mens_outerwear.html">Men's T-Shirts</a>
             </div>
             <div>
-                <a href="#">Ladies T-Shirts</a>
+                <a href="mens_outerwear.html">Ladies T-Shirts</a>
             </div>
         </nav>
     </header>
@@ -56,6 +56,74 @@
     <section class="select-items">
         <div class="select-tshirt">
             <div>
+                <a href="product.html">
+                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <a href="product.html">
+                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <a href="product.html">
+                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <a href="product.html">
+                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
+            </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
                 <img src="images/ts1.jpg" alt="tshirt"> </div>
             <div>
                 <p>YouTube Ultimate Hooded Sweatshirt</p>
@@ -95,93 +163,29 @@
             </div>
         </div>
         <div class="select-tshirt">
-                <div>
-                    <img src="images/ts1.jpg" alt="tshirt"> </div>
-                <div>
-                    <p>YouTube Ultimate Hooded Sweatshirt</p>
-                    <p class="price">32.45$</p>
-                </div>
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
             </div>
-            <div class="select-tshirt">
-                <div>
-                    <img src="images/ts1.jpg" alt="tshirt"> </div>
-                <div>
-                    <p>YouTube Ultimate Hooded Sweatshirt</p>
-                    <p class="price">32.45$</p>
-                </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
             </div>
-            <div class="select-tshirt">
-                <div>
-                    <img src="images/ts1.jpg" alt="tshirt"> </div>
-                <div>
-                    <p>YouTube Ultimate Hooded Sweatshirt</p>
-                    <p class="price">32.45$</p>
-                </div>
+        </div>
+        <div class="select-tshirt">
+            <div>
+                <img src="images/ts1.jpg" alt="tshirt"> </div>
+            <div>
+                <p>YouTube Ultimate Hooded Sweatshirt</p>
+                <p class="price">32.45$</p>
             </div>
-            <div class="select-tshirt">
-                <div>
-                    <img src="images/ts1.jpg" alt="tshirt"> </div>
-                <div>
-                    <p>YouTube Ultimate Hooded Sweatshirt</p>
-                    <p class="price">32.45$</p>
-                </div>
-            </div>
-            <div class="select-tshirt">
-                <div>
-                    <img src="images/ts1.jpg" alt="tshirt"> </div>
-                <div>
-                    <p>YouTube Ultimate Hooded Sweatshirt</p>
-                    <p class="price">32.45$</p>
-                </div>
-            </div>
-            <div class="select-tshirt">
-                    <div>
-                        <img src="images/ts1.jpg" alt="tshirt"> </div>
-                    <div>
-                        <p>YouTube Ultimate Hooded Sweatshirt</p>
-                        <p class="price">32.45$</p>
-                    </div>
-                </div>
-                <div class="select-tshirt">
-                    <div>
-                        <img src="images/ts1.jpg" alt="tshirt"> </div>
-                    <div>
-                        <p>YouTube Ultimate Hooded Sweatshirt</p>
-                        <p class="price">32.45$</p>
-                    </div>
-                </div>
-                <div class="select-tshirt">
-                    <div>
-                        <img src="images/ts1.jpg" alt="tshirt"> </div>
-                    <div>
-                        <p>YouTube Ultimate Hooded Sweatshirt</p>
-                        <p class="price">32.45$</p>
-                    </div>
-                </div>
-                <div class="select-tshirt">
-                    <div>
-                        <img src="images/ts1.jpg" alt="tshirt"> </div>
-                    <div>
-                        <p>YouTube Ultimate Hooded Sweatshirt</p>
-                        <p class="price">32.45$</p>
-                    </div>
-                </div>
-                <div class="select-tshirt">
-                    <div>
-                        <img src="images/ts1.jpg" alt="tshirt"> </div>
-                    <div>
-                        <p>YouTube Ultimate Hooded Sweatshirt</p>
-                        <p class="price">32.45$</p>
-                    </div>
-                </div>
-                <div class="select-tshirt">
-                        <div>
-                            <img src="images/ts1.jpg" alt="tshirt"> </div>
-                        <div>
-                            <p>YouTube Ultimate Hooded Sweatshirt</p>
-                            <p class="price">32.45$</p>
-                        </div>
-                    </div>
+        </div>
 
 
     </section>
