--- a/cart.html
+++ b/cart.html
@@ -17,13 +17,13 @@
                 <img src="images/menu.png" alt="">
             </div>
             <div>
-                <a href="#">
+                <a href="index.html">
                     <strong>SHOP</strong>
                 </a>
             </div>
             <div class="cart-icon">
-
-                <img src="images/cart.png" alt="">
+                <a href="cart.html">
+                <img src="images/cart.png" alt=""></a>
 
             </div>
 
@@ -72,7 +72,7 @@
     <section class="checkout-box">
         <div>
             total: <span>$32.35</span>
-            <button><a href="#">CHECKOUT</a></button>
+            <button><a href="checkout.html">CHECKOUT</a></button>
         </div>
     </section>
 
