--- a/product.html
+++ b/product.html
@@ -17,29 +17,29 @@
                 <img src="images/menu.png" alt="">
             </div>
             <div>
-                <a href="#">
+                <a href="index.html">
                     <strong>SHOP</strong>
                 </a>
             </div>
             <div class="cart-icon">
-
-                <img src="images/cart.png" alt="">
+                <a href="cart.html">
+                <img src="images/cart.png" alt=""> </a>
 
             </div>
 
         </div>
         <nav>
             <div>
-                <a href="#">Men's Outerwear</a>
+                <a href="mens_outerwear.html">Men's Outerwear</a>
             </div>
             <div>
-                <a href="#">Ladies Outerwear</a>
+                <a href="mens_outerwear.html">Ladies Outerwear</a>
             </div>
             <div>
-                <a href="#">Men's T-Shirts</a>
+                <a href="mens_outerwear.html">Men's T-Shirts</a>
             </div>
             <div>
-                <a href="#">Ladies T-Shirts</a>
+                <a href="mens_outerwear.html">Ladies T-Shirts</a>
             </div>
         </nav>
     </header>
@@ -78,7 +78,7 @@
                         <a class="add-to-cart-button" href="#">ADD TO CART</a>
                     </div> -->
                 <button>
-                    <a href="#">ADD TO CART</a>
+                    <a href="cart.html">ADD TO CART</a>
                 </button>
             </div>
         </div>
