--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="bottom-buttons">
     <div>
             <div>
-                    <h2>Ladies Outerwear</h2>
+                    <h2>Men's T-Shirts</h2>
                 </div>
                 <div class="shop-now">
                     <a href="mens_outerwear.html">SHOP NOW</a>
@@ -80,7 +80,7 @@
     </div>
     <div>
             <div>
-                    <h2>Ladies Outerwear</h2>
+                    <h2>Ladies T-Shirts</h2>
                 </div>
                 <div class="shop-now">
                     <a href="mens_outerwear.html">SHOP NOW</a>
