--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -43,8 +43,8 @@
             </div>
         </nav>
     </header>
-    <section class="mens-outerwear">
-        <div class="mens-outerwear-img">
+    <section class="mens-outerwear" class="mens-outer">
+        <div class="mens-outerwear-im">
             <img src="images/mens_outerwear.jpg" alt=""> </div>
         <div>
             <h2>Men's Outerwear</h2>
