--- a/product.html
+++ b/product.html
@@ -48,9 +48,9 @@
             <img src="images/ts1.jpg" alt="">
         </div>
 
-        <div>
+        <div class="product-section-div">
             <h1>YouTube Ultimate Hooded Sweatshirt</h1>
-            <p>$32.35</p>
+            <p class="left-allign-text">$32.35</p>
 
             <div class="drop-down">
                 <label for="">Size</label>
@@ -70,8 +70,8 @@
                     <option value="5">5</option>
                 </select>
 
-                <p>Description</p>
-                <p>Stay warm in this cozy hoodie made of 50% cotton and 50% polyester. This comfortable design features set
+                <p class="left-allign-text">Description</p>
+                <p class="left-allign-text">Stay warm in this cozy hoodie made of 50% cotton and 50% polyester. This comfortable design features set
                     in sleeves, dyed to match draw cord and a front pouch pocket. Available in Charcoal with the full color
                     YouTube logo screen printed across the chest. Unisex sizing.</p>
                 <!-- <div >
