now pages are responsive

--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,7 @@
         </div>
 
     </header>
-
+<section class="main-page-section-cart">
     <section class="cart-items-heading">
         <h1>Your Cart</h1>
         <p>(1 item)</p>
@@ -75,6 +75,12 @@
             <button><a href="checkout.html">CHECKOUT</a></button>
         </div>
     </section>
+    <section class="checkout-box-mid-screen">
+        <button>
+            <a href="checkout.html">CHECKOUT</a>
+        </button>
+    </section>    
+</section>
 
     <footer class="cart-footer">
         <a href="#">Made by Polymer</a>
