--- a/checkout.html
+++ b/checkout.html
@@ -53,7 +53,7 @@
 
             <div class="shipping-address">
                 <h2>Shipping Address</h2>
-                <input type="text-area" name="address" placeholder="Address">
+                <input type="text-area" name="address" pla1ceholder="Address">
                 <input type="text" name="city" placeholder="City">
                 <input type="text" name="state" placeholder="State/Province">
                 <input type="text" name="pincode" placeholder="Zip/Postal Code">
