--- a/product.html
+++ b/product.html
@@ -49,8 +49,8 @@
         </div>
 
         <div class="product-section-div">
-            <h1>YouTube Ultimate Hooded Sweatshirt</h1>
-            <p class="left-allign-text">$32.35</p>
+            <h1 class="allin-text-h1">YouTube Ultimate Hooded Sweatshirt</h1>
+            <p class="left-allign-text allin-text">$32.35</p>
 
             <div class="drop-down">
                 <label for="">Size</label>
@@ -84,9 +84,13 @@
         </div>
 
 
-
+        
     </section>
-
+    <div class="btn-for-product-midscreen">
+        <button>
+            <a href="cart.html">ADD TO CART</a>
+        </button>
+        </div>
 
 
 
