object fit done

--- a/checkout.html
+++ b/checkout.html
@@ -130,13 +130,16 @@
                 <input type="button" id="button" value="PLACE ORDER ">
             </div>
         </section>
+        
+    </section>
+    <section class="mid-screen-place-order">
+        <button><a href="">PLACE ORDER</a></button>
     </section>
 
 
 
-
     <!------------------------------------------>
-    <footer>
+    <footer class="checkout-page-footer">
         <a href="#">Made by Polymer</a>
         <div>
             <p>DEMO ONLY</p>
