--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -44,8 +44,12 @@
         </nav>
     </header>
     <section class="mens-outerwear" class="mens-outer">
-        <div class="mens-outerwear-im">
-            <img src="images/mens_outerwear.jpg" alt=""> </div>
+        <!-- <div class="mens-outerwear-im">
+            <img src="images/mens_outerwear.jpg" alt=""> </div> -->
+            <div class="two-image-fit-cover">
+                <img src="images/mens_outerwear.jpg" style="width:100%;height:100%;object-fit:cover;" >
+                
+              </div>
         <div>
             <h2>Men's Outerwear</h2>
         </div>
