--- a/test.html
+++ b/test.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-    <div class="parent">
-        <div class="empty-div">
+   
 
-        </div>
-        <div>
-            <a href="#">SHOP</a>
-        </div>
-        <div>
-            <img src="images/cart.png" alt="">
-        </div>
-    </div>
+
+
+<div style="width:100%;height:240px;">
+  <img src="images/mens_outerwear.jpg" alt="Norway" style="float:left;width:100%;height:100%;object-fit:cover;">
+  <!-- <img src="mens_tshirts.jpg" alt="Paris" style="float:left;width:50%;height:100%;object-fit:cover;"> -->
+</div>
 
 </body>
+
+
+
 
 </html>
