--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -23,7 +23,8 @@
             </div>
             <div class="cart-icon">
                 <a href="cart.html">
-                    <img src="images/cart.png" alt=""></a>
+                    <img src="images/cart.png" alt="">
+                </a>
 
             </div>
 
@@ -44,12 +45,10 @@
         </nav>
     </header>
     <section class="mens-outerwear" class="mens-outer">
-        <!-- <div class="mens-outerwear-im">
-            <img src="images/mens_outerwear.jpg" alt=""> </div> -->
-            <div class="two-image-fit-cover">
-                <img src="images/mens_outerwear.jpg" style="width:100%;height:100%;object-fit:cover;" >
-                
-              </div>
+        <div class="two-image-fit-cover">
+            <img src="images/mens_outerwear.jpg">
+
+        </div>
         <div>
             <h2>Men's Outerwear</h2>
         </div>
@@ -61,7 +60,9 @@
         <div class="select-tshirt">
             <div>
                 <a href="product.html">
-                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+                    <img src="images/ts1.jpg" alt="tshirt">
+                </a>
+            </div>
             <div>
                 <p>YouTube Ultimate Hooded Sweatshirt</p>
                 <p class="price">32.45$</p>
@@ -70,7 +71,9 @@
         <div class="select-tshirt">
             <div>
                 <a href="product.html">
-                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+                    <img src="images/ts1.jpg" alt="tshirt">
+                </a>
+            </div>
             <div>
                 <p>YouTube Ultimate Hooded Sweatshirt</p>
                 <p class="price">32.45$</p>
@@ -79,7 +82,9 @@
         <div class="select-tshirt">
             <div>
                 <a href="product.html">
-                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+                    <img src="images/ts1.jpg" alt="tshirt">
+                </a>
+            </div>
             <div>
                 <p>YouTube Ultimate Hooded Sweatshirt</p>
                 <p class="price">32.45$</p>
@@ -88,7 +93,9 @@
         <div class="select-tshirt">
             <div>
                 <a href="product.html">
-                    <img src="images/ts1.jpg" alt="tshirt"></a> </div>
+                    <img src="images/ts1.jpg" alt="tshirt">
+                </a>
+            </div>
             <div>
                 <p>YouTube Ultimate Hooded Sweatshirt</p>
                 <p class="price">32.45$</p>
