picture removed in small screen 2nd page

--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
     <section class="mens-outerwear" class="mens-outer">
-        <div class="two-image-fit-cover">
+        <div class="two-image-fit-cover-mens-outerwear">
             <img src="images/mens_outerwear.jpg">
 
         </div>
