--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -44,7 +44,7 @@
             </div>
         </nav>
     </header>
-    <section class="mens-outerwear" class="mens-outer">
+    <section class="mens-outerwear mens-outer">
         <div class="two-image-fit-cover-mens-outerwear">
             <img src="images/mens_outerwear.jpg">
 
