position of shop fixed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-                <div class="empty"></div>
+                 <!-- <div class="empty"></div>  -->
                 <img src="images/menu.png" alt="">
             </div>
-            <div>
+            <div class="heading-shop">
                 <a href="index.html">
                     <strong>SHOP</strong>
                 </a>
