--- a/checkout.html
+++ b/checkout.html
@@ -14,11 +14,11 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-                <div class="empty"></div>
+                <!-- <div class="empty"></div> -->
 
                 <img src="images/menu.png" alt="">
             </div>
-            <div>
+            <div class="heading-shop">
                 <a href="index.html">
                     <strong>SHOP</strong>
                 </a>
