inappropriate class names changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-                 <!-- <div class="empty"></div>  -->
+
                 <img src="images/menu.png" alt="">
             </div>
             <div class="heading-shop">
@@ -49,7 +49,7 @@
     
     <section class="mens-outerwear">
         
-        <div class="two-image-fit-cover">
+        <div class="cover-image">
             <img src="images/mens_outerwear.jpg">
 
         </div>
@@ -62,7 +62,7 @@
     </section>
     <section class="ladies-outerwear">
 
-        <div class="two-image-fit-cover">
+        <div class="cover-image">
             <img src="images/ladies_outerwear.jpg">
 
         </div>
@@ -78,7 +78,7 @@
         <div class="tshirt-images">
 
 
-            <div class="two-image-fit-cover two-image-fit-cover-two-image">
+            <div class="cover-image cover-image-bottom">
                 <img src="images/ladies_tshirts.jpg">
                 <img src="images/mens_tshirts.jpg">
             </div>
