--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -14,7 +14,7 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-                <!-- <div class="empty"></div> -->
+              
                 <img src="images/menu.png" alt="">
             </div>
             <div class="heading-shop">
@@ -45,8 +45,8 @@
             </div>
         </nav>
     </header>
-    <section class="mens-outerwear mens-outer">
-        <div class="two-image-fit-cover-mens-outerwear">
+    <section class="mens-outerwear">
+        <div class="image-cover-mens-outerwear">
             <img src="images/mens_outerwear.jpg">
 
         </div>
