--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-                <!-- <div class="empty"></div> -->
+            
                 <img src="images/menu.png" alt="">
             </div>
             <div class="heading-shop">
@@ -50,8 +50,8 @@
         </div>
 
         <div class="product-section-div">
-            <h1 class="allin-text-h1">YouTube Ultimate Hooded Sweatshirt</h1>
-            <p class="left-allign-text allin-text">$32.35</p>
+            <h1>YouTube Ultimate Hooded Sweatshirt</h1>
+            <p class="price-of-product">$32.35</p>
 
             <div class="drop-down">
                 <label for="">Size</label>
@@ -71,8 +71,8 @@
                     <option value="5">5</option>
                 </select>
 
-                <p class="left-allign-text">Description</p>
-                <p class="left-allign-text">Stay warm in this cozy hoodie made of 50% cotton and 50% polyester. This comfortable design features set
+                <p class="description-text">Description</p>
+                <p class="description-text">Stay warm in this cozy hoodie made of 50% cotton and 50% polyester. This comfortable design features set
                     in sleeves, dyed to match draw cord and a front pouch pocket. Available in Charcoal with the full color
                     YouTube logo screen printed across the chest. Unisex sizing.</p>
 
