--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -14,7 +14,7 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-              
+
                 <img src="images/menu.png" alt="">
             </div>
             <div class="heading-shop">
@@ -54,7 +54,7 @@
             <h2>Men's Outerwear</h2>
         </div>
         <div>
-            <p class="text">(16 items)</p>
+            <p class="no-of-items">(16 items)</p>
         </div>
     </section>
     <section class="select-items">
