--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
     <header>
         <div class="heading">
             <div class="menu-img">
-            
+
                 <img src="images/menu.png" alt="">
             </div>
             <div class="heading-shop">
@@ -72,8 +72,10 @@
                 </select>
 
                 <p class="description-text">Description</p>
-                <p class="description-text">Stay warm in this cozy hoodie made of 50% cotton and 50% polyester. This comfortable design features set
-                    in sleeves, dyed to match draw cord and a front pouch pocket. Available in Charcoal with the full color
+                <p class="description-text">Stay warm in this cozy hoodie made of 50% cotton and 50% polyester. This
+                    comfortable design features set
+                    in sleeves, dyed to match draw cord and a front pouch pocket. Available in Charcoal with the full
+                    color
                     YouTube logo screen printed across the chest. Unisex sizing.</p>
 
                 <button>
