--- a/checkout.html
+++ b/checkout.html
@@ -59,8 +59,9 @@
                 <input type="text" name="city" placeholder="City">
                 <input type="text" name="state" placeholder="State/Province">
                 <input type="text" name="pincode" placeholder="Zip/Postal Code">
-                <label for="">country</label>
-                <div>
+                
+                <div class="country-div">
+                        <label for="">Country</label>
                     <select class="country" name="" id="">
                         <option value="United States">United States</option>
                         <option value="Canada">Canada</option>
