--- a/checkout.html
+++ b/checkout.html
@@ -61,7 +61,7 @@
                 <input type="text" name="pincode" placeholder="Zip/Postal Code">
                 
                 <div class="country-div">
-                        <label for="">Country</label>
+                        <label for="country">Country</label>
                     <select class="country" name="" id="">
                         <option value="United States">United States</option>
                         <option value="Canada">Canada</option>
