--- a/checkout.html
+++ b/checkout.html
@@ -62,7 +62,7 @@
                 
                 <div class="country-div">
                         <label for="country">Country</label>
-                    <select class="country" name="" id="">
+                    <select class="country" name="country">
                         <option value="United States">United States</option>
                         <option value="Canada">Canada</option>
                     </select>
