--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <title>ecommerce-sameer</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-
+    <script async custom-element="amp-auto-ads"
+    src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 
 <body>
     <header>
+            <amp-auto-ads type="adsense"
+            data-ad-client="ca-pub-6683709509107099">
+</amp-auto-ads>
         <div class="heading">
             <div class="menu-img">
 
