--- a/mens_outerwear.html
+++ b/mens_outerwear.html
@@ -8,9 +8,15 @@
     <title>men's outerwear</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/mens_outerwear.css">
+    <script async custom-element="amp-auto-ads"
+    src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 
 <body>
+        <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-6683709509107099">
+</amp-auto-ads>
     <header>
         <div class="heading">
             <div class="menu-img">
